--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-left.html
@@ -13,7 +13,7 @@
     <p>From here you can go to: (seen from back towards sea)</p>
     <ul>
         <li>
-            Up the <a href=headland.html"">headland</a> to your left.
+            Up the <a href="headland.html">headland</a> to your left.
             This seems a very though climb (ClimbDC25) due to steepness (+5) and the thick growth (+5).
             You can also go <a href="headland.html">around the headland</a>
         </li>
