--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -93,7 +93,7 @@
         <li>A black and gold book (Book of Annihilation).</li>
         <li>Faerun Magic Shop Manual.</li>
         <li>A familiar book (spell book Kadunkle).</li>
-        <li>Inside the spell book you find some scrolls (transmute rock to mud, dominate person, swim, clairaudience/clairvoyance, veil).</li>
+        <li>Inside the spell book you find some scrolls (transmute rock to mud, dominate person, swim, clairaudience/clairvoyance, veil, knock).</li>
         <li>One vial with a potion is standing next to the statue (potion of restoration)</li>
         <li>As well as a sealed pot (full with sugar)</li>
     </ul>
