Finish the Pink Flower Tree.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -5,10 +5,14 @@
 
 {% block events %}
     <p>When you enter one of the houses you immediately notice a skeleton lifeless on the ground, wearing ragged clothing.</p>
+    <p>When walking through the area you notice a butterfly sucking the life out of another butterfly.</p>
 {% endblock %}
 
 {% block locations %}
-    <p>There are various points of interest in this large area with relatively little vegetation</p>
+    <p>
+        There are various points of interest in this large area with relatively little vegetation.
+        It is striking that there are no signs of
+    </p>
     <ul>
         <li>A stream of water that ends in the sea.</li>
         <li>A few stone houses with their wooden roofs collapsed and walls with huge tears stand in a circle.</li>
@@ -17,7 +21,7 @@
     </ul>
     <p>Towards other places.</p>
     <ul>
-        <li>Follow the stream towards <a href="purple-tree.html">Purple Flower Tree</a></li>
+        <li>Follow the stream towards <a href="the-tree.html">Pink Flower Tree</a></li>
         <li>Go back to the <a href="beach-left.html">beach</a></li>
         <li>Move <a href="inland-center.html">into the jungle</a></li>
         <li>
@@ -43,7 +47,7 @@
     </dl>
     <dl class="dc">
        <dt>FortDC: 14 (water from stream)</dt>
-       <dd>-5 Will saves (1h)</dd>
+       <dd>-2 Will saves (1h)</dd>
     </dl>
 {% endblock %}
 
