--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-center.html
@@ -14,14 +14,13 @@
         <li>The jungle is thick, very thick and it is hard to get through.</li>
         <li>You see a lot of colorful plants, but animals don't show themselves.</li>
         <li>The place is full with vermin however especially mosquito's</li>
-
     </ul>
     <p>
         It is hard to orientate. You can only choose a general direction, not a destination.
         Again seen from the beach the directions are:
     </p>
     <ul>
-        <li><a href="purple-tree.html">Forward</a></li>
+        <li><a href="the-tree.html">Forward</a></li>
         <li><a href="beach-center.html">Back</a></li>
         <li><a href="abandoned-village.html">Left</a></li>
         <li><a href="inland-right.html">Right</a></li>
