--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-right.html
@@ -28,7 +28,7 @@
         Again seen from the beach the directions are:
     </p>
     <ul>
-        <li><a href="purple-tree.html">Forward</a></li>
+        <li><a href="the-tree.html">Forward</a></li>
         <li><a href="beach-center.html">Back</a></li>
         <li><a href="inland-center.html">Left</a></li>
         <li>
