Update items on the island.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -82,8 +82,8 @@
 {% block items %}
     <p>On the beach, some belongings of a dead ranger.</p>
     <ul>
-        <li>Bow +1 fire burst</li>
-        <li>20 arrows</li>
+        <li>Bow +1 speed</li>
+        <li>20 arrows + 5 force arrows</li>
         <li>Studded leather +2</li>
         <li>1x CSW</li>
     </ul>
