Adding a lot more knowledge checks.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-right.html
@@ -90,15 +90,19 @@
     <p>In the rock of the headland there is a burrow. Inside that burrow stands the following.</p>
     <ul>
         <li>A gold & black statue of a half-man half-monkey holding a flower.</li>
-        <li>A black and gold book (Book of Annihilation).</li>
+        <li>A black and gold book called Book of Annihilation. (see misc)</li>
         <li>Faerun Magic Shop Manual.</li>
         <li>A familiar book (spell book Kadunkle).</li>
         <li>Inside the spell book you find some scrolls (transmute rock to mud, dominate person, swim, clairaudience/clairvoyance, veil, knock).</li>
         <li>One vial with a potion is standing next to the statue (potion of restoration)</li>
+        <li>A silk rope</li>
         <li>As well as a sealed pot (full with sugar)</li>
     </ul>
 {% endblock %}
 
 {% block misc %}
-    <p>no misc</p>
+    <p>
+        The black and gold book lies open and one passage stands out on the page.
+        Do not believe in chance. When you see three random objects do not see coincidence, see providence.
+    </p>
 {% endblock %}
