--- a/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/index.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/04-respectable-citizens/index.html
@@ -4,4 +4,8 @@
     <ul>
         <li>Elite pirate ship should enter the harbour</li>
     </ul>
+    <ul>
+        The book will scream out again:
+        Break the hearts of all atheist. Only abandoning love leads to the right path.
+    </ul>
 {% endblock %}
