--- a/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-taskmaster.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-taskmaster.html
@@ -1,16 +1,18 @@
 {% extends "dnd/abstract/game_character.html" %}
 {% load staticfiles %}
 
-{% block name %}Formian tainted worker{% endblock %}
+{% block name %}Formian tainted taskmaster{% endblock %}
 {% block summary %}Inhabitant of Big Ant Island.{% endblock %}
-{% block motivation %}No motivation{% endblock %}
+{% block motivation %}
+    <p>Dedicated to work for the hive, using their dominated monsters to do some heavy lifting.</p>
+{% endblock %}
 {% block story %}
     <p>
-        All Formians on the island have been corrupted and deprivated by the evil that Hanuman's pure good soul attracts.
+        All Formians on the island have been corrupted and deprived by the evil that Hanuman's pure good soul attracts.
         The parasitic Stirges are the most common form of evil on the island.
         Therefor the Formians have taken on traits of Stirges like sucking blood and they have grown wings.
         The queen is dead so they do not have a hive mind any more. Instead it is an everybody-for-themselves,
-        with grewsome results.
+        with gruesome results.
         Next to this they are so close to the power of Hanuman's soul that part of its power tries to manifest in them.
         They gain a few of the destructive powers of Hanuman's soul.
     </p>
