--- a/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-worker.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/Formian+tainted-worker.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block name %}Formian tainted worker{% endblock %}
-{% block summary %}Inhabitant of Big Ant Island. They patrol the beach in search for food and supplies{% endblock %}
+{% block summary %}Inhabitant of Big Ant Island. They patrol surroundings and the beach in search for food and supplies{% endblock %}
 {% block motivation %}
     <ul>
         <li>Want to make their round to find supplies or food</li>
@@ -14,7 +14,7 @@
         Workers are mostly scared. Their eyes are blood red and they have wings which makes them stand out with normal Formians.
     </p>
     <p>
-        All Formians on the island have been corrupted and deprivated by the evil that Hanuman's pure good soul attracts.
+        All Formians on the island have been corrupted and deprived by the evil that Hanuman's pure good soul attracts.
         The parasitic Stirges are the most common form of evil on the island.
         Therefor everything on the island takes on traits of Stirges, like red eyes, sucking blood and they have grown wings.
         This includes the Formians to a big degree.
