--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -9,8 +9,13 @@
 {% endblock %}
 
 {% block events %}
-    <p>During the day all Formians are asleep. Except 2 patrols with 2 Myrmians</p>
-    <p>In the evening and night the Hive is at its busiest. Workers do not act as guards</p>
+    <p>During the day all Formians are asleep. Except 2 patrols with 2 Myrmians and 2 taskmasters</p>
+    <ul>
+        <li>One patrol is always on level 2</li>
+        <li>Another walks level 0 in a seemingly random pattern</li>
+        <li>The taskmaster walk the parameters with two Ankhegs</li>
+    </ul>
+    <p>In the evening and night the Hive is at its busiest. Workers do not act as guards, but the rest could alarm everybody.</p>
 {% endblock %}
 
 {% block locations %}
@@ -25,19 +30,19 @@
         <li>2 = North entrance guard post</li>
         <li>3 = Storage</li>
         <li>4 = Storage</li>
-        <li>5 = 2x Taskmaster</li>
+        <li>5 = 2x Taskmaster (1 asleep)</li>
         <li>6 = 1x Taskmaster + 1x Myrmarch</li>
         <li>7 = 1x Taskmaster</li>
-        <li>8 = Chamber of the Vessel + taskmaster.</li>
+        <li>8 = Chamber of the Vessel + Taskmaster.</li>
         <li>9 = Prison</li>
         <li>10 = Storage</li>
         <li>11 = Storage</li>
-        <li>12 = 2x Myrmarch</li>
+        <li>12 = Myrmarch + taskmaster</li>
         <li>13 = West entrance guard post</li>
         <li>14 = South entrance guard post</li>
         <li>15 = Storage</li>
         <li>16 = Storage</li>
-        <li>17 = 2x Taskmaster</li>
+        <li>17 = 2x Taskmaster (1 asleep)</li>
     </ul>
 {% endblock %}
 
