--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-1.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-1.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block events %}
-    <p>During the day all Formians are asleep. Except 2 patrols with 2 Myrmians</p>
+    <p>During the day all Formians are asleep. Except 2 patrols with 2 Myrmians and 2 taskmasters</p>
     <p>In the evening and night the Hive is at its busiest. Workers do not act as guards</p>
 {% endblock %}
 
