--- a/src/templatefiles/templates/dnd/concrete/monsters/stats/pink-flower-tree.html
+++ b/src/templatefiles/templates/dnd/concrete/monsters/stats/pink-flower-tree.html
@@ -17,7 +17,7 @@
     Telepathy
 {% endblock %}
 {% block spell-like-abilities %}
-    Psyionics
+    Psyionics (ML10, 88PP)
 {% endblock %}
 {% block saves %}
     <ul>
@@ -58,8 +58,16 @@
         <dt>Flowers</dt>
         <dd><p>
             One medium can lie down on the soft inner part of each flower of the tree.
-             With psyionics the tree will attempt to make you sleep in its flowers.
+            With psyionics the tree will attempt to make you sleep in its flowers.
             These flowers will perform a coup the grace with the spikes once you do.
+        </p></dd>
+        <dt>Psyionics</dt>
+        <dd><p>
+            <a href="http://dndsrd.net/spellsDtoE.html#entangle">Entangle</a>,
+            <a href="http://dndsrd.net/psionicPowersAtoC.html#attraction">Attraction</a>,
+            <a href="http://dndsrd.net/psionicPowersQtoW.html#suggestion-psionic">Suggestion</a>,
+            <a href="http://dndsrd.net/psionicPowersDtoF.html#fate-link">Fate link</a>,
+            <a href="http://dndsrd.net/psionicPowersGtoP.html#modify-memory-psionic">Modify memory</a>,
         </p></dd>
     </dl>
 {% endblock %}
