Handle blunt weapon situation.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -82,12 +82,12 @@
 {% block items %}
     <p>Here is a list of items with the place where to find them and the search DC.</p>
     <ul>
-        <li>Masterwork shortspear: boat, SearchDC10</li>
+        <li>Masterwork shortspear (blunt): boat, SearchDC10</li>
         <li>
             Locked chest with 1xCSW + 3 platinum: cracked wall of a house, SearchDC20.
             BreakDC10 (breaks the vial), OpenDC15.
         </li>
-        <li>Dagger: near the fireplace, SearchDC15</li>
+        <li>Masterwork dagger (blunt): near the fireplace, SearchDC15</li>
     </ul>
 {% endblock %}
 
