Adding DC's to hive traps.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -64,7 +64,7 @@
 {% block traps %}
     <p>
         Entrances that are not guarded by a <a href="../../groups/Formians-patrol.html">patrol</a> are covered with poisoned caltrops.
-        They attack with +0 against 10+Dex. If it hits the character stepped in one. SearchDC17
+        They attack with +0 against 10+Dex. If it hits the character stepped in one. SearchDC25, DisableDC20
     </p>
     <dl class="dc">
         <dt>FortDC: (Myrmarchs poison)</dt>
