Adjust entrances hive and start vulcanic ring area.

--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/hive-0.html
@@ -26,8 +26,8 @@
     </p>
     <p>Here is a list of chambers in the Hive</p>
     <ul>
-        <li>1 = North entrance</li>
-        <li>2 = North entrance guard post</li>
+        <li>1 = West entrance</li>
+        <li>2 = West entrance guard post</li>
         <li>3 = Storage</li>
         <li>4 = Storage</li>
         <li>5 = 2x Taskmaster (1 asleep)</li>
@@ -38,8 +38,8 @@
         <li>10 = Storage</li>
         <li>11 = Storage</li>
         <li>12 = Myrmarch + taskmaster</li>
-        <li>13 = West entrance guard post</li>
-        <li>14 = South entrance guard post</li>
+        <li>13 = South entrance guard post</li>
+        <li>14 = North entrance guard post</li>
         <li>15 = Storage</li>
         <li>16 = Storage</li>
         <li>17 = 2x Taskmaster (1 asleep)</li>
