--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/vulcano-ring.html
@@ -1,4 +1,45 @@
 {% extends "dnd/abstract/place.html" %}
 
+{% block title %}Vulcano ring{% endblock %}
+{% block summary %}Area on top of the vulcano.{% endblock %}
+
+{% block events %}
+    <p></p>
+{% endblock %}
+
+{% block locations %}
+    <p>There is a lake in the middle of the vulcano with a small </p>
+{% endblock %}
+
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+   <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
+{% endblock %}
+
+
+
 <p>Another save for taint.</p>
 <p>Meet third party member there who owns the boat. He can also fix the boat, but he wants something else ...</p>
