More detail for vulcano ring.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/01-born-again/01-finding-a-letter.html
@@ -60,7 +60,7 @@
     </dl>
     <dl class="dc">
         <dt>ReligionDC: (Valkur, when appropriate at this time)</dt>
-        <dd>10 >= God of good winds. Mostly prayed to by sailors.</dd>
+        <dd>10 >= God of good winds. Mostly prayed to by sailors. Churches often function as lighthouses.</dd>
         <dd>15 >= A lesser God that is not very important in the pantheon. Often thought to be a pawn of greater Gods.</dd>
         <dd>25 >= Rumored to be aligned with Talos god of storms.</dd>
     </dl>
