--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/abandoned-village.html
@@ -11,7 +11,8 @@
 {% block locations %}
     <p>
         There are various points of interest in this large area with relatively little vegetation.
-        It is striking that there are no signs of
+        It is striking that there are no signs of animals.
+        And if they saw snapped trees before. These are missing here.
     </p>
     <ul>
         <li>A stream of water that ends in the sea.</li>
@@ -65,8 +66,6 @@
     <dl class="dc">
         <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
         <dd> >= 20 This land is very fertile due to the vulcanic soil.</dd>
-        <dt>NatureDC: (never saw vulcano's so -5 penalty)</dt>
-        <dd> >= 20 Trees got snapped due to sudden ruptures in the ground.</dd>
     </dl>
 
     <dl class="dc">
